  includes its own *.h to get proper prototype checking. Patch contributed
  by Eero Tamminen. (THH)
- Makefile: Keep "all" as first target. (VRI)
- desk/deskapp.c desk/deskapp.h desk/deskbind.h desk/deskmain.c
  desk/deskwin.c desk/deskwin.h: The number of columns of icons in desktop
  windows is now dynamically adjusted according to window width. (RFB)

2013-04-25
- bios/kprint.c include/config.h: Added COLDFIRE_DEBUG_PRINT. (VRI)
- cli/cmdedit.c: In line edit, ctl-C may now be used to cancel the
  current line. (RFB)

2013-04-30
- cli/cmdutil.c: Fix comparison of date_sep. Based on a contribution by
  Eero Tamminen. (RFB)
- bios/lineavars.h vdi/vdi_esc.c: Fix bug: vq_chcells() returned fixed
  values for rows/cols. (RFB)
  
2013-05-01
- doc/status.txt: Updated status of a couple of VDI functions. (RFB)
- bios/screen.c: Replaced DBG_SCREEN with KDEBUG(()). (RFB)

2013-05-03
- bios/lineainit.c bios/lineavars.h: Expand shift_offset[] to handle
  8 planes. (RFB)
- bios/lineainit.c bios/lineavars.h bios/lineavars.S vdi/vdi_mouse.c:
  Allow mouse cursor in 8 planes. (RFB)

2013-05-04
- vdi/vdi_tblit.S  vdi/vdi_tblit_cf.S: Support text blitting for
  8 planes. (RFB)
- vdi/vdi_raster.c: Support 8 planes for vro_cpyfm(), vrt_cpyfm(). (RFB)

2013-05-05
- bios/videl.h desk/deskrez.c desk/desktop.def desk/desktop.rsc:
  Allow 256 colours for desktop. (RFB)

2013-05-06
- bios/xhdi.c: Fixed XHInqDriver(). Reported by Markus Fröschle, fixed by
  David Gálvez. (VRI)
- Makefile: Fixed "Unknown ColdFire Machine" non-fatal error when doing
  "make coldfire-sources". (VRI)
- po/de.po: Updated German translation. (THH)

2013-05-07
- bios/linea.S: Fixed compilation with binutils 2.9.1. (VRI)
- aes/gemgraf.c include/compat.h: Code cleanup: eliminate LHIBT() &
  LLOBT() macros. (RFB)
- desk/deskact.c desk/desksupp.c desk/deskwin.c include/compat.h:
  Code cleanup: eliminate LPOINTER macro. (RFB)

2013-05-08
- po/fr.po: Updated. (VRI)