@@ -4766,3 +4766,5 @@ Start... early ages
 
 2013-05-08
 - po/fr.po: Updated. (VRI)
+- desk/deskinf.c: Fix bug: file info dialog showed residual values for
+  number of files/folders. (RFB)
